# flask-epl-1

./: README.md  pyproject.toml  requirements.txt
epl/: __init__.py  models.py  routes.py
epl/players/: routes.py
epl/players/templates/players/: new_player.html  update_player.html
