[project]
name = "flask-epl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=25.0.3",
    "mysqlclient>=2.2.7",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "pymysql>=1.1.2",
]
